# MSL

./: .codebase  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  plan.txt
.github/workflows/: ci.yml
Guest/: msld.c
Resources/: msl.entitlements
Sources/: Daemon.swift  IPC.swift  MSLVSOCK.m  Setup.swift  State.swift  VM.swift  Version.swift  main.swift
scripts/: build-image.sh
src/: console.h  console.m  daemon.h  daemon.m  ipc.h  ipc.m  main.c  runtime.h  setup.h  setup.m  state.h  state.m  vm.h  vm.m
